--- a/main.css
+++ b/main.css
@@ -67,7 +67,8 @@ img {
     grid-auto-flow: column;
     grid-template-areas: 
     "texto"
-    "input";
+    "input"
+    "comenzar";
     justify-content: center;
     align-content: center;
 }
@@ -107,6 +108,17 @@ input[type = text]{
     margin-top: 0.75em;
 }
 
+span {
+    margin-right: 0.75em;
+    margin-left: -0.1em;
+}
 input[type = text]:focus{
     outline: none;
+}
+
+input[value="Comenzar!"]{
+    grid-area: comenzar;
+    justify-self: center;
+    margin: 0.75em
+
 }
