--- a/main.css
+++ b/main.css
@@ -22,9 +22,8 @@ body {
 h1 {
     grid-area: header;
     align-self: center;
-    justify-self: left;
-    padding-left: 1em;
-    color: salmon;
+    justify-self: center;
+    color: lightsalmon;
     text-shadow: 2px 2px 4px white;
     text-align: center;
 }
@@ -37,12 +36,15 @@ h1 {
 .sidebar-container{
     grid-area: sidebar;
     display: grid;
-    grid-template-columns: 1fr;
     grid-template-rows: repeat(3, 7em);
-    align-self: center;   
+    margin-left: 0.4em;
+    margin-right: 1.4em;
+    font-size: 1em;
+    align-self: center;
+   
 }
 
-.memotest-container{
+.memotest-container4{
     display: grid;
     grid-area: main;
     grid-template-columns: repeat(4, 20em);
@@ -61,52 +63,7 @@ img {
     pointer-events: none
 }
 
-.dificultad {
-    grid-area: main;
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-areas: 
-    "texto"
-    "input";
-    justify-content: center;
-    align-content: center;
-}
-
-
 .oculto {
     display: none;
     grid-area: main;
-}
-
-.hidden {
-    visibility: hidden;
-}
-
-.dificultad > div {
-    grid-area: texto;
-    justify-self: center;
-    align-self: flex-end;
-}
-
-#selector-dificultad {
-    grid-area: input;
-}
-
-span {
-    font-size: xx-large;
-}
-
-input[type = text]{
-    grid-area: input;
-    border: none;
-    border-bottom: 2px solid palevioletred;
-    background-color: transparent;
-    font-size: xx-large;
-    font-family: cursive;
-    text-align: center;
-    margin-top: 0.75em;
-}
-
-input[type = text]:focus{
-    outline: none;
 }
