--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,24 @@
 @import url(../css/normalize.css);
-html * {
+html {
+  font-size: 18px;
   font-family: Arial, Helvetica, sans-serif; }
 
 .container {
-  border-radius: 20px;
-  padding: 20px;
+  border-radius: 2rem;
+  padding: 2rem;
   display: grid;
-  height: calc(100vh - 80px);
-  max-width: 100%;
   background: #F7A8B8;
-  margin: 20px;
+  margin: 0.75rem;
   box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5);
-  grid-template-columns: 15% auto;
+  grid-template-columns: 15% auto 15%;
   row-gap: 1rem;
   column-gap: 1rem;
   grid-template-rows: 10% auto;
-  grid-template-areas: "header header" "sidebar main"; }
+  grid-template-areas: "header header header" "sidebar main sidebar2"; }
 
 .header {
-  border-radius: 10px;
-  padding: 10px;
+  border-radius: 1rem;
+  padding: 1rem;
   grid-area: header;
   background: #55CDFC;
   display: flex;
@@ -27,69 +26,73 @@ html * {
   .header h1 {
     flex: 1;
     align-self: center;
-    text-shadow: 1px 1px black;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
     text-align: center;
     color: white;
     font-size: 1.5rem; }
 
 .sidebar {
-  border-radius: 10px;
-  padding: 10px;
+  border-radius: 1rem;
+  padding: 1rem;
   grid-area: sidebar;
   background: #55CDFC;
   box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 20px; }
+  padding: 1rem; }
   .sidebar * {
     color: white;
-    font-size: 1.1rem;
+    font-size: 1rem;
     text-shadow: 1px 1px 3px black;
-    text-align: center;
-    margin: 3px; }
+    text-align: center; }
+
+.sidebar2 {
+  grid-area: sidebar2; }
+  .sidebar2 .ad-bar {
+    border-radius: 1rem;
+    object-fit: cover;
+    width: 100%;
+    height: 100%; }
 
 .reintentar {
-  background-color: #F7A8B8;
+  background-color: rgba(0, 0, 0, 0.1);
   border: 0px none;
   color: white;
   text-shadow: #02111B;
-  width: 50%;
-  height: 50px;
+  width: 7rem;
+  height: 2rem;
   border-radius: 5px;
   box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.25);
+  transition: background-color .15s;
   align-self: center; }
 
 .reintentar:hover {
-  background-color: rgba(255, 255, 255, 0.55);
-  animation: hover 0.1s; }
+  background-color: rgba(255, 255, 255, 0.25); }
 
 .memotest-container {
-  border-radius: 10px;
-  padding: 10px;
+  border-radius: 1rem;
+  padding: 1rem;
   grid-area: main;
-  max-height: 100%;
   background: white;
   display: grid;
-  grid-template-columns: repeat(4, 25%);
-  gap: 0.5em 0.5em;
-  grid-template-rows: repeat(4, 25%);
+  grid-template-columns: repeat(4, auto);
+  gap: 2rem 4rem;
+  grid-template-rows: repeat(4, auto);
   box-shadow: 3px 3px 3px 0px rgba(0, 0, 0, 0.25);
-  justify-content: space-around;
-  align-content: space-around;
+  align-content: center;
+  justify-content: center;
   align-items: center;
   justify-items: center;
-  padding: 40px; }
+  padding: 2rem; }
 
 .carta {
-  background-color: transparent;
-  height: 100%;
-  width: 100%; }
+  background-color: transparent; }
 
 .atrac {
   background-color: transparent;
-  height: 100px;
-  width: 100px;
+  height: 5rem;
+  width: 5rem;
   animation: aparecer 1s; }
 
 .carta-interno {
@@ -101,8 +104,8 @@ html * {
   transform: rotateY(180deg); }
 
 .carta-frente, .carta-reverso {
-  width: 100px;
-  height: 100px;
+  width: 5rem;
+  height: 5rem;
   position: absolute;
   backface-visibility: hidden; }
 
@@ -110,52 +113,61 @@ html * {
   transform: rotateY(180deg); }
 
 img {
-  width: 100px;
-  height: 100px;
+  width: 5rem;
+  height: 5rem;
   border-radius: 10px;
   box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.5); }
 
 .bloquear-mouse {
   pointer-events: none; }
 
+@media all and (max-width: 1080px) {
+  html {
+    font-size: 14px; }
+  .container {
+    grid-template-columns: 20% auto;
+    grid-template-areas: "header header" "sidebar main"; }
+  .sidebar2 {
+    display: none; } }
+
+@media all and (max-height: 700px) {
+  html {
+    font-size: 14px; } }
+
+@media all and (max-height: 600px) {
+  html {
+    font-size: 12px; } }
+
+@media all and (max-height: 600px) {
+  html {
+    font-size: 10px; } }
+
 @media all and (max-width: 768px) {
-  img, .carta-frente, .carta-reverso, .atrac {
-    width: 50px;
-    height: 50px; }
-  .header > h1 {
-    font-size: 1.2rem; }
+  html {
+    font-size: 12px; }
   .memotest-container {
     grid-row: 2 / 3;
     grid-column: 1 / 3;
-    padding: 20px; }
+    padding: 1rem; }
   .sidebar {
     grid-row: 3 / 4;
-    grid-column: 1 /3;
-    font-size: 1rem; }
-  .reintentar {
-    height: 40px; } }
+    grid-column: 1 / 3; } }
 
-@media all and (max-height: 657px) {
-  img, .carta-frente, .carta-reverso, .atrac {
-    width: 50px;
-    height: 50px; }
-  .sidebar > * {
-    font-size: 0.65rem;
-    margin: 0px; }
-  .reintentar {
-    height: 25px; } }
+@media all and (max-width: 500px) {
+  html {
+    font-size: 11px; }
+  .sidebar p {
+    display: none; } }
+
+@media all and (max-width: 450px) {
+  html {
+    font-size: 8px; } }
 
 @keyframes aparecer {
   from {
     opacity: 0; }
   to {
     opacity: 1; } }
-
-@keyframes hover {
-  from {
-    background-color: #F7A8B8; }
-  to {
-    background-color: rgba(255, 255, 255, 0.55); } }
 
 .victoria {
   grid-area: main;
