--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,30 +9,28 @@ $some_black: #02111B;
     padding: $pixels
 }
 
-html * {
+html {
+    font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
-    @include rounder-border(20px);
-    display: grid;
-    height: calc(100vh - 80px);
-    max-width: 100%;
+    @include rounder-border(2rem);
+    display: grid; 
     background: $ama_pink;
-    margin: 20px;
+    margin: 0.75rem;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.5);
-
-    grid-template-columns: 15% auto;
+    grid-template-columns: 15% auto 15%;
     row-gap: 1rem;
     column-gap: 1rem;
     grid-template-rows: 10% auto;
     grid-template-areas: 
-    "header header"
-    "sidebar main";
+    "header header header"
+    "sidebar main sidebar2";
 }
 
 .header {
-    @include rounder-border(10px);
+    @include rounder-border(1rem);
     grid-area: header;
     background: $maya_blue;
     display: flex;
@@ -40,7 +38,7 @@ html * {
     h1 {
         flex: 1;
         align-self: center;
-        text-shadow: 1px 1px black;
+        text-shadow: 1px 1px rgba(0,0,0,0.5);
         text-align: center;
         color: white;
         font-size: 1.5rem;
@@ -48,70 +46,75 @@ html * {
 }
 
 .sidebar {
-    @include rounder-border(10px);
+    @include rounder-border(1rem);
     grid-area: sidebar;
     background: $maya_blue;
     box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    padding: 20px;
-    
-    
+    padding: 1rem;
     * {
         color: white;
-        font-size: 1.1rem;
+        font-size: 1rem;
         text-shadow: 1px 1px 3px black;
         text-align: center;
-        margin: 3px;
+        
     }
 }
 
+.sidebar2 {
+    grid-area: sidebar2;
+    .ad-bar{
+        border-radius: 1rem;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    }
+}
 .reintentar {
-    background-color: $ama_pink;
+    background-color: rgba(0,0,0,0.1);
     border: 0px none;
     color: white;
     text-shadow: #02111B;
-    width: 50%;
-    height: 50px;
+    width: 7rem;
+    height: 2rem;
     border-radius: 5px;
     box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
+    transition: background-color .15s;
     align-self: center;
 }
 
 .reintentar:hover {
-    background-color: rgba(255,255,255,0.55);
-    animation: hover 0.1s;
-
+    background-color: rgba(255,255,255,0.25)
 }
+
 .memotest-container {
-    @include rounder-border(10px);
+    @include rounder-border(1rem);
     grid-area: main;
-    max-height: 100%;
+    
     background: white;
     display: grid;
-    grid-template-columns: repeat(4, 25%);
-    gap: 0.5em 0.5em;
-    grid-template-rows: repeat(4, 25%);
+    grid-template-columns: repeat(4, auto);
+    gap: 2rem 4rem;
+    grid-template-rows: repeat(4, auto);
     box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
-    justify-content: space-around;
-    align-content: space-around;
+    align-content: center;
+    justify-content: center;
     align-items: center;
     justify-items: center;
-    padding: 40px;
+    padding: 2rem;
 }
 
 .carta {
     background-color: transparent;
-    height: 100%;
-    width: 100%;
 }
 
 
 .atrac {
     background-color: transparent;
-    height: 100px;
-    width: 100px;
+    height: 5rem;
+    width: 5rem;
     animation: aparecer 1s;
     
 }
@@ -128,8 +131,8 @@ html * {
 }
 
 .carta-frente, .carta-reverso {
-    width: 100px;
-    height: 100px;
+    width: 5rem;
+    height: 5rem;
     position: absolute;
     backface-visibility: hidden;
 }
@@ -139,8 +142,8 @@ html * {
 }
 
 img {
-    width: 100px;
-    height: 100px;
+    width: 5rem;
+    height: 5rem;
     border-radius: 10px;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.5);
 }
@@ -149,57 +152,77 @@ img {
     pointer-events: none
 }
 
-@media all and (max-width: 768px) {
-    img, .carta-frente, .carta-reverso, .atrac {
-        width: 50px;
-        height: 50px;
+@media all and (max-width:1080px)  {
+    html{
+        font-size: 14px;
     }
 
-    .header > h1{
-        font-size: 1.2rem
+    .container {
+        grid-template-columns: 20% auto;
+        grid-template-areas: 
+        "header header"
+        "sidebar main";
     }
+    .sidebar2 {
+        display: none
+    }
+    
+}
+
+@media all and(max-height: 700px) {
+    html{
+        font-size: 14px;
+    }
+}
+
+@media all and(max-height: 600px) {
+    html{
+        font-size: 12px;
+    }
+}
+
+@media all and(max-height: 600px) {
+    html{
+        font-size: 10px;
+    }
+}
+
+@media all and (max-width: 768px) {
+    html {
+        font-size: 12px;
+    }
+
     .memotest-container {
         grid-row: 2 / 3;
         grid-column: 1 / 3 ;
-        padding: 20px
+        padding: 1rem;
     }
     
     .sidebar {
         grid-row: 3 / 4;
-        grid-column: 1 /3;
-        font-size: 1rem;
+        grid-column: 1 / 3;
     }
-    .reintentar{
-        height: 40px
-    }
-
 }
 
-@media all and (max-height: 657px) {
-    img, .carta-frente, .carta-reverso, .atrac {
-        width: 50px;
-        height: 50px;
+@media all and (max-width:500px) {
+    html {
+        font-size: 11px
     }
-
-    .sidebar > *{
-        font-size: 0.65rem;
-        margin: 0px
+    .sidebar p {
+        display: none;
     }
+}
 
-    .reintentar {
-        height: 25px
+@media all and (max-width:450px) {
+    html {
+        font-size: 8px
     }
-
 }
 
 @keyframes aparecer {
     from {opacity: 0;}
     to {opacity: 1;}
 
-}
-@keyframes hover {
-    from {background-color: $ama_pink;}
-    to {background-color: rgba(255,255,255,0.55);}
 }
 
 .victoria {
