--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,7 +65,7 @@ html {
 
 .sidebar2 {
     grid-area: sidebar2;
-    .ad-bar{
+    .mockup{
         border-radius: 1rem;
     object-fit: cover;
     width: 100%;
