--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,9 +4,16 @@ $ama_pink: #F7A8B8;
 $other_pink: #FF5E5B;
 $some_black: #02111B;
 
+$cardLength: 6rem;
+
 @mixin rounder-border($pixels) {
     border-radius: $pixels;
     padding: $pixels
+}
+
+@mixin fixedSize(){
+    height: $cardLength;
+    width: $cardLength;
 }
 
 html {
@@ -16,42 +23,26 @@ html {
 
 .container {
     @include rounder-border(2rem);
-    display: grid; 
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
     background: $ama_pink;
+    height: calc(100vh - 5.5rem);
+    width: calc(100vw - 5.5rem);
     margin: 0.75rem;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.5);
-    grid-template-columns: 15% auto 15%;
-    row-gap: 1rem;
-    column-gap: 1rem;
-    grid-template-rows: 10% auto;
-    grid-template-areas: 
-    "header header header"
-    "sidebar main sidebar2";
+    
 }
 
-.header {
-    @include rounder-border(1rem);
-    grid-area: header;
-    background: $maya_blue;
-    display: flex;
-    box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
-    h1 {
-        flex: 1;
-        align-self: center;
-        text-shadow: 1px 1px rgba(0,0,0,0.5);
-        text-align: center;
-        color: white;
-        font-size: 1.5rem;
-    }
-}
-
-.sidebar {
-    @include rounder-border(1rem);
-    grid-area: sidebar;
-    background: $maya_blue;
-    box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
+.sidebar, .sidebar2 {
+    flex: 1;
     display: flex;
     flex-direction: column;
+}
+.sidebar {
+    @include rounder-border(1rem);
+    background: $maya_blue;
+    box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
     justify-content: space-around;
     padding: 1rem;
     * {
@@ -61,18 +52,21 @@ html {
         text-align: center;
         
     }
+    order: 1;
 }
 
-.sidebar2 {
-    grid-area: sidebar2;
-    .mockup{
+.sidebar2 {    
+    order: 3;
+    img{
+        flex: 1;
         border-radius: 1rem;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+        box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
+        width: 100%;
+        object-fit: cover;
     }
 }
-.reintentar {
+
+.try-again {
     background-color: rgba(0,0,0,0.1);
     border: 0px none;
     color: white;
@@ -85,152 +79,152 @@ html {
     align-self: center;
 }
 
-.reintentar:hover {
+.try-again:hover {
     background-color: rgba(255,255,255,0.25)
 }
-
-.memotest-container {
-    @include rounder-border(1rem);
-    grid-area: main;
-    
+.main {
+    flex: 2;
+    order: 2;
+    margin: 0 1rem;
+    position: relative;
+    border-radius: 1rem;
     background: white;
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    gap: 2rem 4rem;
-    grid-template-rows: repeat(4, auto);
-    box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    justify-items: center;
-    padding: 2rem;
+    display:flex;
+
+    > img {
+        height: 100%;
+        display: block;
+        max-width: 100%;
+        visibility: hidden;
+    }
+    .memotest-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        border-radius: 1rem;
+        background: white;
+        display: grid;
+        grid-template-columns: repeat(4, $cardLength);
+        grid-template-rows: repeat(4, $cardLength);
+        align-content: space-around;
+        justify-content: space-around;
+        box-shadow: 3px 3px 3px 0px rgba(0,0,0,0.25);        
+        gap: 1rem 1rem;
+        order: 2;
+    }
 }
 
-.carta {
+
+.card {
     background-color: transparent;
 }
 
 
 .atrac {
+    @include fixedSize();
     background-color: transparent;
-    height: 5rem;
-    width: 5rem;
-    animation: aparecer 1s;
-    
+    animation: appear 1s;
 }
 
-.carta-interno {
+.card-interior {
     position: relative;
     transition: transform 0.6s;
     transform-style: preserve-3d;
     
 }   
 
-.carta .carta-interno {
+.card .card-interior {
     transform: rotateY(180deg);
 }
 
-.carta-frente, .carta-reverso {
-    width: 5rem;
-    height: 5rem;
+.card-front, .card-reverse {
+    @include fixedSize();
     position: absolute;
     backface-visibility: hidden;
 }
 
-.carta-reverso {
+.card-reverse {
     transform: rotateY(180deg);
 }
 
-img {
-    width: 5rem;
-    height: 5rem;
+.memotest-container img {
+    @include fixedSize();
     border-radius: 10px;
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.5);
 }
 
-.bloquear-mouse{
+.block-mouse{
     pointer-events: none
 }
 
-@media all and (max-width:1080px)  {
+
+@media all and (max-width:1200px)  {
     html{
-        font-size: 14px;
+        font-size: 16px;
+    }
+    .sidebar2 {
+        display: none;
+    }
+    .sidebar {
+        flex:0.5
     }
 
     .container {
-        grid-template-columns: 20% auto;
-        grid-template-areas: 
-        "header header"
-        "sidebar main";
+        flex-direction: column;
     }
-    .sidebar2 {
-        display: none
+
+    .main {
+        order: 0;
+        margin: 0 0 1rem 0;
     }
-    
 }
 
-@media all and(max-height: 700px) {
-    html{
+
+@media all and (max-width: 768px) {
+    html {
         font-size: 14px;
     }
 }
 
-@media all and(max-height: 600px) {
-    html{
-        font-size: 12px;
-    }
-}
-
-@media all and(max-height: 600px) {
-    html{
-        font-size: 10px;
-    }
-}
-
-@media all and (max-width: 768px) {
-    html {
-        font-size: 12px;
-    }
-
-    .memotest-container {
-        grid-row: 2 / 3;
-        grid-column: 1 / 3 ;
-        padding: 1rem;
-    }
-    
-    .sidebar {
-        grid-row: 3 / 4;
-        grid-column: 1 / 3;
-    }
-}
-
-@media all and (max-width:500px) {
+@media all and (max-width:550px) {
     html {
         font-size: 11px
     }
-    .sidebar p {
-        display: none;
-    }
+    
 }
 
 @media all and (max-width:450px) {
     html {
-        font-size: 8px
+        font-size: 9px
+    }
+    .memotest-container {
+        gap: 0 0 ;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
     }
 }
 
-@keyframes aparecer {
+@keyframes appear {
     from {opacity: 0;}
     to {opacity: 1;}
 
 }
 
-.victoria {
-    grid-area: main;
-    animation: aparecer 3s;
-    justify-self: center;
-    align-self: center;
+.victory {
+    animation: appear 3s;
+    text-align: center;
     font-size: 3rem;
     text-shadow: 3px 3px 5px rgba(0,0,0,0.5);
     color: #ffdf7b;
+}
+.victory-wrapper {
+    display:flex;
+    flex:1;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
 }
